# cardiacFoam

./: .gitignore  .gitmodules  .markdownlint.yaml  Allwclean  Allwmake  README.md  check_includes.py  electroActivationFoam.C  prepare_simulation_data.py
Make/: files  (+1 more)
applications/scripts/driverFoam/: pyproject.toml  spec_overrides.example.json
applications/scripts/driverFoam/cardiacfoam_tutorials_driver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
applications/scripts/driverFoam/openfoam_driver/: FRONTEND_HANDOFF.md  GUI_CONTRACT.md  README.md  __init__.py  active_tension_catalog.py  cli.py  dict_entries.py  gui_schema.py  introspection.py  ionic_model_catalog.py  launch.py  spec_overrides.example.json  tutorial_contracts.py
applications/scripts/driverFoam/openfoam_driver/postprocessing/: __init__.py  driver.py  plot_builder.py  table_writer.py
applications/scripts/driverFoam/openfoam_driver/scripts/: generate_catalog.py  run_case.sh
applications/scripts/driverFoam/openfoam_driver/specs/: __init__.py  common.py
applications/scripts/driverFoam/openfoam_driver/tests/: test_dict_entries.py  test_engine_manifest.py  test_gui_schema.py  test_introspection.py  test_launch.py  test_mutators.py  test_postprocessing_driver.py  test_single_cell_contract.py  test_table_writer.py  test_template_contract.py  test_tutorial_architecture_contract.py
applications/scripts/purkinje/density_mapper/: README.md  mapped.json  pyproject.toml
applications/scripts/purkinje/density_mapper/examples/: basic_usage.py  interactive_bullseye_input.py  (+4 more)
(+3427 files in other folders)
