[project]
name = "ventricular-probability"
version = "0.1.0"
description = "Standalone probability engine scaffold for ventricular anatomical tags"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
